# CJJPROJ

./: CMakeLists.txt  README.md
DesignMode/: CMakeLists.txt  tags
DesignMode/exe/: ht
DesignMode/include/: Account.h  Bridge.h  Decorator.h  Singleton.h  Strategy.h  Thread.h  Watched.h  Watcher.h
DesignMode/src/: CMakeLists.txt
DesignMode/src/designmode/: CMakeLists.txt
DesignMode/src/designmode/component/: CMakeLists.txt
DesignMode/src/designmode/component/observer/: CMakeLists.txt  Watched.cpp  Watcher.cpp
DesignMode/src/designmode/component/strategy/: CMakeLists.txt  Strategy.cpp
DesignMode/src/designmode/component/template/: Account.cpp  CMakeLists.txt
DesignMode/src/designmode/singleton/: CMakeLists.txt  Singleton.cpp
DesignMode/src/designmode/srp/: CMakeLists.txt
DesignMode/src/designmode/srp/bridge/: Bridge.cpp  CMakeLists.txt
DesignMode/src/designmode/srp/decorator/: CMakeLists.txt  Decorator.cpp
DesignMode/src/main/: CMakeLists.txt  main.cpp
DesignMode/src/thread/: CMakeLists.txt  Thread.cpp
exe/: priclient  priserver
src/: CMakeLists.txt
src/prievent/client/: CMakeLists.txt  main.cpp
src/prievent/server/: CMakeLists.txt  main.cpp
test/: a.out  main.cpp  test.cpp  test_main.cpp
